fix navbar fix overflow-x

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -59,6 +59,10 @@ $colors: map-merge($colors, $addColors);
 
 html {
   background-color: $primary-light;
+  
+}
+html, body {
+  overflow-x: hidden;
 }
 
 //Footer 
@@ -72,14 +76,13 @@ footer {
 }
 
 .nav-lemur {
-  cursor: pointer;
-  width: 11vh;
-  height: 11vh;
+  width: 12vh;
+  height: 12vh;
   position: fixed;
   left: 0;
   top: 0;
   background-color: $dark-color;
-  border-radius: 0 0 98% 0;
+  border-radius: 0 0 100% 0;
   box-shadow: 0 0.5em 1em -0.125em rgba(#000000, 0.6),
     0 0px 0 1px rgba(#000000, 0.15);
   z-index: 3;
@@ -95,12 +98,13 @@ footer {
 
   .nav-panel {
     position: relative;
-    top: -200%;
+    top: -27vh;
     left: 0;
     min-width: 100%;
-    border-radius: 0 0 6px 0;
+    border-radius: 0 0 7px 0;
     z-index: 2;
-    height: 210%;
+    height: 27vh;
+    
     transform: translate(0px);
     transform-origin: bottom;
     -webkit-transition: transform 0.15s ease-in;
@@ -125,7 +129,9 @@ footer {
     }
   }
   .nav-show-panel {
-    transform: translate(0px, 100%);
+    transform: translate(0px, 26vh);
+    box-shadow: 0 0.5em 1em -0.125em rgba(#000000, 0.6),
+    0 0px 0 1px rgba(#000000, 0.15);
   }
 }
 
